--- a/index.html
+++ b/index.html
@@ -64,10 +64,10 @@
             <div class="follow team">
                 <h4>Follow Us</h4>
                 <div class="images">
-                    <img src="./images/fb.png" alt="" class="img">
-                    <img src="./images/twitter.png" alt="" class="img">
-                    <img src="./images/IG.png" alt="" class="img">
-                    <img src="./images/in.png" alt="" class="img">
+                    <img src="./fb.png" alt="" class="img">
+                    <img src="./twitter.png" alt="" class="img">
+                    <img src="./IG.png" alt="" class="img">
+                    <img src="./in.png" alt="" class="img">
                 </div>
             </div>
 
@@ -91,14 +91,14 @@ industryexperience.html
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="CSS/industryexperience.css">
+    <link rel="stylesheet" href="industryexperience.css">
     <title>Document</title>
 </head>
 <body>
     <nav class="navbar">
             <ul>
                 <div>
-                    <li><a href=""> <img src="./images/industryexperiencelogo2.svg" alt=""></a></li>
+                    <li><a href=""> <img src="./industryexperiencelogo2.svg" alt=""></a></li>
                 </div>
                 <div class="navdiv">
                     <li class="home"><a href="">Home</a></li>
@@ -113,7 +113,7 @@ industryexperience.html
         <div>
             <div>
                 <h1>Vetted and Trusted</h1>
-                <img src="./images/thick2.svg" alt="">
+                <img src="./thick2.svg" alt="">
             </div>
             <div>
                 <p>At Zuri Team, we train, test and place talent in various industries. We have access to the best pool of skills in the tech Industry.</p>
@@ -121,7 +121,7 @@ industryexperience.html
                 <button>Join Talent pool</button>
             </div>
             <div>
-                <img src="./images/section1.png" alt="">
+                <img src="./section1.png" alt="">
             </div>
         </div>
     </div>
@@ -134,14 +134,14 @@ industryexperience.html
                 <p>Talent Placed in 5 countries</p>
             </div>
             <div>
-                <img src="./images/GER.svg" alt="">
-                <img src="./images/ENG.svg" alt="">
-                <img src="./images/ind.svg" alt="">
-                <img src="./images/NIG.svg" alt="">
-                <img src="./images/ussa.svg" alt="">
+                <img src="./GER.svg" alt="">
+                <img src="./ENG.svg" alt="">
+                <img src="./ind.svg" alt="">
+                <img src="./NIG.svg" alt="">
+                <img src="./ussa.svg" alt="">
             </div>
             <div>
-                <img src="./images/section2.png" alt="">
+                <img src="./section2.png" alt="">
             </div>
         </div>
     </div>
@@ -172,23 +172,23 @@ industryexperience.html
     <div>
         <h1>Why Hire our Talents</h1>
         <div>
-            <img src="./images/people.svg" alt="">
+            <img src="./people.svg" alt="">
             <p>Zuri Team has a highly skilled set of talents that are built on referral and successful partnerships.</p>
         </div>
         <div>
-            <img src="./images/mech.svg" alt="">
+            <img src="./mech.svg" alt="">
             <p>Our recruiters are exceptionally skilled in identifying top talent around the globe and matching them with the client's needs.</p>
         </div>
         <div>
-            <img src="./images/hand.svg" alt="">
+            <img src="./hand.svg" alt="">
             <p>We have an 85% fill ratio for every open position we partner for.</p>
         </div>
         <div>
-            <img src="./images/write.svg" alt="">
+            <img src="./write.svg" alt="">
             <p>Contract renewal rate for our consultant is 90 percent.</p>
         </div>
         <div>
-            <img src="./images/people.svg" alt="">
+            <img src="./people.svg" alt="">
             <p>60% of our consultants are converted to full-time employees.</p>
         </div>
         <div>
@@ -198,7 +198,7 @@ industryexperience.html
 
         <footer>
             <div>
-                <img src="images/logo (5).svg" alt="">
+                <img src="/logo (5).svg" alt="">
             </div>
 
 
